# STUDIA_TMiPA_Projects

R2S1_P2/: .envrc  .gitignore  README.md  main.py  pyproject.toml  students.sample.toml
R2S1_P2/modules/: assets.py  calculations.py  diagrams.py  pdf_report.py  plots.py
